feat: improve session UI and file reference workflow