@@ -1,8 +1,9 @@
 package io.github.easyagent.ui.jcef;
 
-import com.google.gson.JsonObject;
+import com.intellij.openapi.application.ApplicationManager;
 import com.intellij.openapi.project.Project;
 import com.intellij.openapi.util.text.StringUtil;
+import com.intellij.util.ui.StartupUiUtil;
 import com.intellij.ui.jcef.JBCefBrowser;
 import io.github.easyagent.ai.StreamEventListener;
 import io.github.easyagent.ai.entity.AIResponse;
@@ -18,8 +19,13 @@ import io.github.easyagent.settings.models.ModelInfo;
 import io.github.easyagent.ui.enums.JsAction;
 import io.github.easyagent.ui.enums.JsCallback;
 import io.github.easyagent.ui.enums.ThemeType;
+import io.github.easyagent.ui.service.ChatUiBridgeService;
 import io.github.easyagent.ui.service.ChatManager;
+import io.github.easyagent.ui.service.FileEditService;
+import io.github.easyagent.ui.service.FileReferenceService;
 import io.github.easyagent.ui.service.MessageConverter;
+import io.github.easyagent.ui.service.entity.FileReferenceCandidatePayload;
+import io.github.easyagent.ui.service.entity.FileReferencePayload;
 import io.github.easyagent.util.GsonUtils;
 import lombok.extern.slf4j.Slf4j;
 import org.cef.browser.CefBrowser;
@@ -28,9 +34,10 @@ import org.cef.browser.CefMessageRouter;
 import org.cef.callback.CefQueryCallback;
 import org.cef.handler.CefMessageRouterHandlerAdapter;
 
-import javax.swing.UIManager;
-import java.util.Arrays;
+import java.util.EnumMap;
 import java.util.List;
+import java.util.function.Consumer;
+import java.util.Map;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
@@ -56,33 +63,6 @@ public class JCEFMessageBridge {
     /** 前端 JS 空数组字面量。 */
     private static final String JS_EMPTY_ARRAY = "[]";
 
-    /** JSON 请求字段名：action。 */
-    private static final String FIELD_ACTION = "action";
-
-    /** JSON 请求字段名：cliType。 */
-    private static final String FIELD_CLI_TYPE = "cliType";
-
-    /** JSON 请求字段名：sessionId。 */
-    private static final String FIELD_SESSION_ID = "sessionId";
-
-    /** JSON 请求字段名：text。 */
-    private static final String FIELD_TEXT = "text";
-
-    /** JSON 请求字段名：sessionIds。 */
-    private static final String FIELD_SESSION_IDS = "sessionIds";
-
-    /** JSON 请求字段名：pendingQueue。 */
-    private static final String FIELD_PENDING_QUEUE = "pendingQueue";
-
-    /** JSON 请求字段名：retryMaxCount。 */
-    private static final String FIELD_RETRY_MAX_COUNT = "retryMaxCount";
-
-    /** JSON 请求字段名：retryTimeoutMs。 */
-    private static final String FIELD_RETRY_TIMEOUT_MS = "retryTimeoutMs";
-
-    /** JSON 请求字段名：modelId。 */
-    private static final String FIELD_MODEL_ID = "modelId";
-
     private final JBCefBrowser browser;
 
     private final ChatManager chatManager;
@@ -92,6 +72,15 @@ public class JCEFMessageBridge {
     private final ModelConfigService modelConfigService;
 
     private final Project project;
+
+    private final FileReferenceService fileReferenceService;
+
+    private final ChatUiBridgeService chatUiBridgeService;
+
+    private final FileEditService fileEditService;
+
+    /** JS 请求处理器映射。 */
+    private final Map<JsAction, QueryHandler<? extends JsRequest>> queryHandlers = new EnumMap<>(JsAction.class);
 
     private volatile String currentSessionId;
 
@@ -116,6 +105,13 @@ public class JCEFMessageBridge {
         this.sessionService = new SessionService();
         this.modelConfigService = new ModelConfigService();
         this.project = project;
+        this.fileReferenceService = project != null ? project.getService(FileReferenceService.class) : null;
+        this.chatUiBridgeService = project != null ? project.getService(ChatUiBridgeService.class) : null;
+        this.fileEditService = new FileEditService(project, project != null ? project.getBasePath() : null);
+        if (this.chatUiBridgeService != null) {
+            this.chatUiBridgeService.registerBridge(this);
+        }
+        this.registerHandlers();
         this.initModelConfigs();
     }
 
@@ -135,6 +131,58 @@ public class JCEFMessageBridge {
     }
 
     /**
+     * 注册 JS 请求处理器。
+     */
+    private void registerHandlers() {
+        this.registerHandler(JsAction.LIST_ALL_SESSIONS, ActionRequest.class, request -> this.pushAllSessions());
+        this.registerHandler(JsAction.LIST_SESSIONS, ListSessionsRequest.class,
+                request -> this.pushSessionList(request.cliType()));
+        this.registerHandler(JsAction.LOAD_HISTORY, LoadHistoryRequest.class,
+                request -> this.loadHistory(request.sessionId(), request.cliType()));
+        this.registerHandler(JsAction.SEND_MESSAGE, SendMessageRequest.class, request -> this.sendUserMessage(
+                request.text(), request.cliType(), request.sessionId(), request.modelId(), request.fileReferences()));
+        this.registerHandler(JsAction.STOP_GENERATION, StopGenerationRequest.class,
+                request -> this.chatManager.stopGeneration(request.sessionId()));
+        this.registerHandler(JsAction.GET_THEME, ActionRequest.class, request -> this.sendThemeUpdate());
+        this.registerHandler(JsAction.GET_AVAILABLE_CLIS, ActionRequest.class, request -> this.pushAvailableCLIs());
+        this.registerHandler(JsAction.PAGE_READY, ActionRequest.class, request -> this.pushInitialData());
+        this.registerHandler(JsAction.DELETE_SESSIONS, DeleteSessionsRequest.class,
+                this::handleDeleteSessions);
+        this.registerHandler(JsAction.SAVE_PENDING_QUEUE, SavePendingQueueRequest.class,
+                this::handleSavePendingQueue);
+        this.registerHandler(JsAction.GET_RETRY_CONFIG, ActionRequest.class, request -> this.pushRetryConfig());
+        this.registerHandler(JsAction.SAVE_RETRY_CONFIG, SaveRetryConfigRequest.class,
+                this::handleSaveRetryConfig);
+        this.registerHandler(JsAction.GET_MODELS, ActionRequest.class, request -> this.pushModels());
+        this.registerHandler(JsAction.SYNC_MODELS, ActionRequest.class, request -> this.handleSyncModels());
+        this.registerHandler(JsAction.SAVE_MODELS, SaveModelsRequest.class, this::handleSaveModels);
+        this.registerHandler(JsAction.QUERY_CLI_MODELS, QueryCliModelsRequest.class,
+                this::handleQueryCliModels);
+        this.registerHandler(JsAction.SEARCH_FILE_REFERENCES, SearchFileReferencesRequest.class,
+                this::handleSearchFileReferences);
+        this.registerHandler(JsAction.RESOLVE_FILE_REFERENCE, ResolveFileReferenceRequest.class,
+                this::handleResolveFileReference);
+        this.registerHandler(JsAction.SAVE_CLIPBOARD_IMAGE, SaveClipboardImageRequest.class,
+                this::handleSaveClipboardImage);
+        this.registerHandler(JsAction.OPEN_FILE_EDIT_DIFF, OpenFileEditDiffRequest.class,
+                request -> this.handleOpenFileEditDiff(request.editId()));
+        this.registerHandler(JsAction.REVERT_FILE_EDIT, RevertFileEditRequest.class,
+                request -> this.handleRevertFileEdit(request.editId()));
+    }
+
+    /**
+     * 注册单个 JS 请求处理器。
+     *
+     * @param action      JS 动作
+     * @param requestType 请求实体类型
+     * @param consumer    处理逻辑
+     * @param <T>         请求实体类型
+     */
+    private <T extends JsRequest> void registerHandler(JsAction action, Class<T> requestType, Consumer<T> consumer) {
+        this.queryHandlers.put(action, new QueryHandler<>(requestType, consumer));
+    }
+
+    /**
      * 安装 JS 桥，注册 CefMessageRouter 处理器。
      */
     public void installJSBridge() {
@@ -147,8 +195,8 @@ public class JCEFMessageBridge {
      * 同步当前 IDE 主题到前端。
      */
     public void sendThemeUpdate() {
-        ThemeType theme = ThemeType.fromLafName(UIManager.getLookAndFeel().getName());
-        this.invokeJSCallback(JsCallback.THEME_CHANGED, "{isDark:" + theme.isDark() + "}");
+        ThemeType theme = ThemeType.fromDark(StartupUiUtil.isUnderDarcula());
+        this.invokeJSCallback(JsCallback.THEME_CHANGED, new ThemePayload(theme.isDark()));
     }
 
     /**
@@ -183,6 +231,9 @@ public class JCEFMessageBridge {
      * 释放通信桥资源。
      */
     public void dispose() {
+        if (this.chatUiBridgeService != null) {
+            this.chatUiBridgeService.unregisterBridge(this);
+        }
         this.chatManager.shutdown();
         this.asyncExecutor.shutdownNow();
     }
@@ -215,17 +266,26 @@ public class JCEFMessageBridge {
      */
     private void pushSessionList(String cliType) {
         this.asyncExecutor.submit(() -> {
-            try {
-                CLIType type = CLIType.valueOf(cliType);
-                List<SessionInfo> sessions = this.currentProjectPath != null
-                        ? this.sessionService.listSessions(type, this.currentProjectPath)
-                        : this.sessionService.listSessions(type);
-                this.invokeJSCallback(JsCallback.SESSION_LIST, GsonUtils.toJson(sessions));
-            } catch (Exception e) {
-                log.warn("Failed to list sessions for {}", cliType, e);
-                this.invokeJSCallback(JsCallback.SESSION_LIST, JS_EMPTY_ARRAY);
-            }
+            this.sendSessionList(cliType);
         });
+    }
+
+    /**
+     * 直接推送指定 CLI 类型的会话列表到前端。
+     *
+     * @param cliType CLI 类型名称
+     */
+    private void sendSessionList(String cliType) {
+        try {
+            CLIType type = CLIType.valueOf(cliType);
+            List<SessionInfo> sessions = this.currentProjectPath != null
+                    ? this.sessionService.listSessions(type, this.currentProjectPath)
+                    : this.sessionService.listSessions(type);
+            this.invokeJSCallback(JsCallback.SESSION_LIST, GsonUtils.toJson(sessions));
+        } catch (Exception e) {
+            log.warn("Failed to list sessions for {}", cliType, e);
+            this.invokeJSCallback(JsCallback.SESSION_LIST, JS_EMPTY_ARRAY);
+        }
     }
 
     /**
@@ -248,7 +308,7 @@ public class JCEFMessageBridge {
         this.asyncExecutor.submit(() -> {
             try {
                 CLIType type = CLIType.valueOf(cliType);
-                String json = this.chatManager.loadHistory(sessionId, type);
+                String json = this.chatManager.loadHistory(sessionId, type, this.currentProjectPath);
                 this.historyCache.put(sessionId, json);
                 this.invokeJSCallback(JsCallback.HISTORY_LOADED, json);
                 this.persistCurrentSession(sessionId, cliType);
@@ -280,25 +340,46 @@ public class JCEFMessageBridge {
      * @param sessionId 会话 ID
      * @param modelId   模型 ID，可为 null
      */
-    private void sendUserMessage(String text, String cliType, String sessionId, String modelId) {
+    private void sendUserMessage(String text, String cliType, String sessionId, String modelId,
+                                 List<FileReferencePayload> fileReferences) {
         try {
             CLIType type = CLIType.valueOf(cliType);
-            String effectiveSessionId = sessionId != null ? sessionId : this.currentSessionId;
+            String effectiveSessionId = StringUtil.isNotEmpty(sessionId)
+                    ? sessionId
+                    : "new-" + System.currentTimeMillis();
+            String prompt = this.fileReferenceService != null
+                    ? this.fileReferenceService.enrichPrompt(text, fileReferences)
+                    : text;
 
-            this.chatManager.sendMessage(text, effectiveSessionId, type, modelId, new StreamEventListener() {
+            this.currentSessionId = effectiveSessionId;
+
+            this.chatManager.sendMessage(prompt, effectiveSessionId, type,
+                    this.currentProjectPath, modelId, new StreamEventListener() {
                 @Override
                 public void onResponse(AIResponse response) {
                     JCEFMessageBridge.this.logAIResponse(response);
-                    String eventJson = MessageConverter.toStreamEventJson(response);
-                    JCEFMessageBridge.this.invokeJSCallback(JsCallback.STREAM_EVENT, eventJson);
-                    if (response.sessionId() != null) {
-                        JCEFMessageBridge.this.currentSessionId = response.sessionId();
+                    String resolvedSessionId = response.sessionId() != null
+                            ? response.sessionId()
+                            : (JCEFMessageBridge.this.currentSessionId != null
+                            ? JCEFMessageBridge.this.currentSessionId
+                            : effectiveSessionId);
+                    if (response.toolCall() != null) {
+                        JCEFMessageBridge.this.fileEditService.trackToolCall(resolvedSessionId, response.toolCall());
                     }
+                    String eventJson = MessageConverter.toStreamEventJson(response, resolvedSessionId,
+                            JCEFMessageBridge.this.currentProjectPath);
+                    JCEFMessageBridge.this.invokeJSCallback(JsCallback.STREAM_EVENT, eventJson);
+                    JCEFMessageBridge.this.currentSessionId = resolvedSessionId;
+                    JCEFMessageBridge.this.persistCurrentSession(resolvedSessionId, cliType);
                 }
 
                 @Override
                 public void onComplete() {
-                    JCEFMessageBridge.this.invokeJSCallback(JsCallback.STREAM_COMPLETE, "");
+                    String resolvedSessionId = JCEFMessageBridge.this.currentSessionId != null
+                            ? JCEFMessageBridge.this.currentSessionId
+                            : effectiveSessionId;
+                    JCEFMessageBridge.this.invokeJSCallback(JsCallback.STREAM_COMPLETE,
+                            new StreamCompletePayload(resolvedSessionId));
                 }
 
                 @Override
@@ -377,15 +458,19 @@ public class JCEFMessageBridge {
      *
      * @param obj 请求 JSON 对象
      */
-    private void handleDeleteSessions(JsonObject obj) {
-        String idsStr = GsonUtils.getString(obj, FIELD_SESSION_IDS);
+    private void handleDeleteSessions(DeleteSessionsRequest request) {
+        String idsStr = request.sessionIds();
         if (idsStr == null || idsStr.isBlank()) {
             return;
         }
-        List<String> sessionIds = Arrays.asList(idsStr.split(","));
-        sessionIds.forEach(this.historyCache::remove);
-        this.sessionService.deleteSessions(sessionIds);
-        this.pushAllSessions();
+        List<String> sessionIds = List.of(idsStr.split(","));
+        this.asyncExecutor.submit(() -> {
+            sessionIds.forEach(this.historyCache::remove);
+            int deleted = this.sessionService.deleteSessions(sessionIds);
+            this.sendSessionList(this.chatManager.getCurrentCLIType().name());
+            this.invokeJSCallback(JsCallback.SESSIONS_DELETED,
+                    new SessionsDeletedPayload(deleted, sessionIds));
+        });
     }
 
     /**
@@ -393,10 +478,10 @@ public class JCEFMessageBridge {
      *
      * @param obj 请求 JSON 对象
      */
-    private void handleSavePendingQueue(JsonObject obj) {
+    private void handleSavePendingQueue(SavePendingQueueRequest request) {
         if (this.project == null) return;
-        String sessionId = GsonUtils.getString(obj, FIELD_SESSION_ID);
-        String pendingJson = GsonUtils.getString(obj, FIELD_PENDING_QUEUE);
+        String sessionId = request.sessionId();
+        String pendingJson = request.pendingQueue();
         EasyAgentState state = EasyAgentState.getInstance(this.project);
         state.savePendingQueue(sessionId, pendingJson);
         state.setCurrentSessionId(sessionId);
@@ -411,13 +496,13 @@ public class JCEFMessageBridge {
     private void pushRestoredState() {
         if (this.project == null) return;
         EasyAgentState state = EasyAgentState.getInstance(this.project);
-        JsonObject data = new JsonObject();
-        data.addProperty("currentSessionId", state.getCurrentSessionId() != null ? state.getCurrentSessionId() : "");
-        data.addProperty("currentCliType", state.getCurrentCliType() != null ? state.getCurrentCliType() : "");
-        data.add("pendingQueues", GsonUtils.toJsonTree(state.getPendingQueues()));
-        data.addProperty("retryMaxCount", state.getRetryMaxCount());
-        data.addProperty("retryTimeoutMs", state.getRetryTimeoutMs());
-        this.invokeJSCallback(JsCallback.STATE_RESTORED, GsonUtils.toJson(data));
+        this.invokeJSCallback(JsCallback.STATE_RESTORED, new RestoredStatePayload(
+                state.getCurrentSessionId() != null ? state.getCurrentSessionId() : "",
+                state.getCurrentCliType() != null ? state.getCurrentCliType() : "",
+                this.pendingQueueStates(state.getPendingQueues()),
+                state.getRetryMaxCount(),
+                state.getRetryTimeoutMs()
+        ));
     }
 
     /**
@@ -426,10 +511,8 @@ public class JCEFMessageBridge {
     private void pushRetryConfig() {
         if (this.project == null) return;
         EasyAgentState state = EasyAgentState.getInstance(this.project);
-        JsonObject data = new JsonObject();
-        data.addProperty("retryMaxCount", state.getRetryMaxCount());
-        data.addProperty("retryTimeoutMs", state.getRetryTimeoutMs());
-        this.invokeJSCallback(JsCallback.RETRY_CONFIG, GsonUtils.toJson(data));
+        this.invokeJSCallback(JsCallback.RETRY_CONFIG,
+                new RetryConfigPayload(state.getRetryMaxCount(), state.getRetryTimeoutMs()));
     }
 
     /**
@@ -437,11 +520,11 @@ public class JCEFMessageBridge {
      *
      * @param obj 请求 JSON 对象
      */
-    private void handleSaveRetryConfig(JsonObject obj) {
+    private void handleSaveRetryConfig(SaveRetryConfigRequest request) {
         if (this.project == null) return;
         EasyAgentState state = EasyAgentState.getInstance(this.project);
-        int maxCount = GsonUtils.getInt(obj, FIELD_RETRY_MAX_COUNT, 0);
-        long timeoutMs = GsonUtils.getLong(obj, FIELD_RETRY_TIMEOUT_MS, 0);
+        int maxCount = request.retryMaxCount();
+        long timeoutMs = request.retryTimeoutMs();
         state.setRetryMaxCount(maxCount);
         state.setRetryTimeoutMs(timeoutMs);
         this.chatManager.updateRetryConfig(maxCount, timeoutMs);
@@ -449,9 +532,12 @@ public class JCEFMessageBridge {
 
     /**
      * 推送模型配置列表到前端。
+     * <p>
+     * 包含模型列表和每种 CLI 类型的默认模型配置。
+     * </p>
      */
     private void pushModels() {
-        String json = GsonUtils.toJson(this.modelConfigService.getAllModels());
+        String json = this.modelConfigService.toJson();
         this.invokeJSCallback(JsCallback.MODELS, json);
     }
 
@@ -482,8 +568,8 @@ public class JCEFMessageBridge {
      *
      * @param obj 请求 JSON 对象，包含 models 数组
      */
-    private void handleSaveModels(JsonObject obj) {
-        String modelsJson = GsonUtils.getString(obj, "models");
+    private void handleSaveModels(SaveModelsRequest request) {
+        String modelsJson = request.models();
         if (modelsJson == null || modelsJson.isBlank()) {
             return;
         }
@@ -499,17 +585,105 @@ public class JCEFMessageBridge {
      *
      * @param obj 请求 JSON 对象，包含 cliType 字段
      */
-    private void handleQueryCliModels(JsonObject obj) {
-        String cliTypeStr = GsonUtils.getString(obj, FIELD_CLI_TYPE);
+    private void handleQueryCliModels(QueryCliModelsRequest request) {
+        String cliTypeStr = request.cliType();
         this.asyncExecutor.submit(() -> {
             if (CLIType.OPENCODE.name().equals(cliTypeStr)) {
                 List<ModelInfo> models = this.modelConfigService.queryOpenCodeModels();
-                String json = GsonUtils.toJson(models);
-                this.invokeJSCallback(JsCallback.CLI_MODELS, json);
+                this.invokeJSCallback(JsCallback.CLI_MODELS, models);
             } else {
                 this.invokeJSCallback(JsCallback.CLI_MODELS, "[]");
             }
         });
+    }
+
+    /**
+     * 搜索项目内的文件引用候选。
+     *
+     * @param obj 请求 JSON
+     */
+    private void handleSearchFileReferences(SearchFileReferencesRequest request) {
+        String query = request.query();
+        int limit = request.limit() > 0 ? request.limit() : 12;
+        String requestId = request.requestId();
+        this.asyncExecutor.submit(() -> {
+            JCEFMessageBridge.this.invokeJSCallback(JsCallback.FILE_REFERENCE_CANDIDATES,
+                    new FileReferenceCandidatesPayload(requestId != null ? requestId : "",
+                            this.fileReferenceService != null
+                                    ? JCEFMessageBridge.this.fileReferenceService.searchCandidates(query, limit)
+                                    : List.of()));
+        });
+    }
+
+    /**
+     * 根据路径生成文件引用并推送到前端输入框。
+     *
+     * @param filePath 文件绝对路径
+     */
+    private void handleResolveFileReference(ResolveFileReferenceRequest request) {
+        String filePath = request.path();
+        if (this.fileReferenceService == null || filePath == null || filePath.isBlank()) {
+            return;
+        }
+        FileReferencePayload reference = this.fileReferenceService.createReference(filePath);
+        if (reference != null) {
+            this.pushFileReferences(List.of(reference));
+        }
+    }
+
+    /**
+     * 保存前端剪贴板中的图片，并生成输入框引用。
+     *
+     * @param dataUrl  图片 Data URL
+     * @param fileName 建议文件名
+     */
+    private void handleSaveClipboardImage(SaveClipboardImageRequest request) {
+        String dataUrl = request.dataUrl();
+        if (this.fileReferenceService == null || dataUrl == null || dataUrl.isBlank()) {
+            return;
+        }
+        this.asyncExecutor.submit(() -> {
+            FileReferencePayload reference = this.fileReferenceService.createImageReference(dataUrl, request.fileName());
+            if (reference != null) {
+                JCEFMessageBridge.this.pushFileReferences(List.of(reference));
+            }
+        });
+    }
+
+    /**
+     * 推送文件引用到前端输入框。
+     *
+     * @param references 文件引用列表
+     */
+    public void pushFileReferences(List<FileReferencePayload> references) {
+        if (references == null || references.isEmpty()) {
+            return;
+        }
+        this.invokeJSCallback(JsCallback.INSERT_REFERENCES, references);
+    }
+
+    /**
+     * 打开文件编辑 diff。
+     *
+     * @param editId 编辑 ID
+     */
+    private void handleOpenFileEditDiff(String editId) {
+        if (editId == null || editId.isBlank()) {
+            return;
+        }
+        ApplicationManager.getApplication().invokeLater(() -> JCEFMessageBridge.this.fileEditService.openDiff(editId));
+    }
+
+    /**
+     * 回撤文件编辑。
+     *
+     * @param editId 编辑 ID
+     */
+    private void handleRevertFileEdit(String editId) {
+        if (editId == null || editId.isBlank()) {
+            return;
+        }
+        ApplicationManager.getApplication().invokeLater(() -> JCEFMessageBridge.this.fileEditService.revertEdit(editId));
     }
 
     /**
@@ -519,12 +693,22 @@ public class JCEFMessageBridge {
      * </p>
      *
      * @param callback 回调枚举
-     * @param data     要传递的 JSON 数据
+     * @param data     已序列化的 JSON 数据
      */
     private void invokeJSCallback(JsCallback callback, String data) {
         String name = callback.getValue();
         String js = JS_CALLBACK_PREFIX + name + "&&" + JS_CALLBACK_PREFIX + name + "(" + data + ")";
         this.executeJS(js);
+    }
+
+    /**
+     * 调用前端 JS 全局回调函数。
+     *
+     * @param callback 回调枚举
+     * @param data     待序列化的对象
+     */
+    private void invokeJSCallback(JsCallback callback, Object data) {
+        this.invokeJSCallback(callback, GsonUtils.toJson(data));
     }
 
     /**
@@ -538,6 +722,22 @@ public class JCEFMessageBridge {
         } catch (Exception e) {
             log.warn("Failed to execute JS: {}", e.getMessage());
         }
+    }
+
+    /**
+     * 将持久化的待发送队列映射转换为前端可消费的列表。
+     *
+     * @param pendingQueues sessionId -> pendingQueue JSON
+     * @return 待发送队列状态列表
+     */
+    private List<PendingQueueStatePayload> pendingQueueStates(Map<String, String> pendingQueues) {
+        if (pendingQueues == null || pendingQueues.isEmpty()) {
+            return List.of();
+        }
+        return pendingQueues.entrySet().stream()
+                .sorted(Map.Entry.comparingByKey())
+                .map(entry -> new PendingQueueStatePayload(entry.getKey(), entry.getValue()))
+                .toList();
     }
 
     /**
@@ -576,44 +776,280 @@ public class JCEFMessageBridge {
                 return;
             }
 
-            JsonObject obj = GsonUtils.parseObject(request);
-            String action = GsonUtils.getString(obj, FIELD_ACTION);
-            if (action == null) {
+            ActionRequest envelope = GsonUtils.fromJson(request, ActionRequest.class);
+            if (envelope == null || envelope.action() == null) {
                 return;
             }
 
-            JsAction jsAction = JsAction.fromValue(action);
+            JsAction jsAction = JsAction.fromValue(envelope.action());
             if (jsAction == null) {
-                log.debug("Unknown JS action: {}", action);
+                log.debug("Unknown JS action: {}", envelope.action());
                 return;
             }
 
-            switch (jsAction) {
-                case LIST_ALL_SESSIONS -> JCEFMessageBridge.this.pushAllSessions();
-                case LIST_SESSIONS -> JCEFMessageBridge.this.pushSessionList(
-                        GsonUtils.getString(obj, FIELD_CLI_TYPE));
-                case LOAD_HISTORY -> JCEFMessageBridge.this.loadHistory(
-                        GsonUtils.getString(obj, FIELD_SESSION_ID),
-                        GsonUtils.getString(obj, FIELD_CLI_TYPE));
-                case SEND_MESSAGE -> JCEFMessageBridge.this.sendUserMessage(
-                        GsonUtils.getString(obj, FIELD_TEXT),
-                        GsonUtils.getString(obj, FIELD_CLI_TYPE),
-                        GsonUtils.getString(obj, FIELD_SESSION_ID),
-                        GsonUtils.getString(obj, FIELD_MODEL_ID));
-                case STOP_GENERATION -> JCEFMessageBridge.this.chatManager.stopGeneration(
-                        GsonUtils.getString(obj, FIELD_SESSION_ID));
-                case GET_THEME -> JCEFMessageBridge.this.sendThemeUpdate();
-                case GET_AVAILABLE_CLIS -> JCEFMessageBridge.this.pushAvailableCLIs();
-                case PAGE_READY -> JCEFMessageBridge.this.pushInitialData();
-                case DELETE_SESSIONS -> JCEFMessageBridge.this.handleDeleteSessions(obj);
-                case SAVE_PENDING_QUEUE -> JCEFMessageBridge.this.handleSavePendingQueue(obj);
-                case GET_RETRY_CONFIG -> JCEFMessageBridge.this.pushRetryConfig();
-                case SAVE_RETRY_CONFIG -> JCEFMessageBridge.this.handleSaveRetryConfig(obj);
-                case GET_MODELS -> JCEFMessageBridge.this.pushModels();
-                case SYNC_MODELS -> JCEFMessageBridge.this.handleSyncModels();
-                case SAVE_MODELS -> JCEFMessageBridge.this.handleSaveModels(obj);
-                case QUERY_CLI_MODELS -> JCEFMessageBridge.this.handleQueryCliModels(obj);
+            QueryHandler<? extends JsRequest> handler = JCEFMessageBridge.this.queryHandlers.get(jsAction);
+            if (handler == null) {
+                log.debug("No JS handler registered for action: {}", envelope.action());
+                return;
             }
+            JCEFMessageBridge.this.dispatchRequest(request, handler);
         }
+    }
+
+    /**
+     * 解析并执行指定请求处理器。
+     *
+     * @param request  原始 JSON 请求
+     * @param handler  请求处理器
+     * @param <T>      请求实体类型
+     */
+    private <T extends JsRequest> void dispatchRequest(String request, QueryHandler<T> handler) {
+        T typedRequest = GsonUtils.fromJson(request, handler.requestType());
+        if (typedRequest == null) {
+            return;
+        }
+        handler.consumer().accept(typedRequest);
+    }
+
+    /**
+     * JS 请求基础接口。
+     */
+    private interface JsRequest {
+        /**
+         * 获取动作名称。
+         *
+         * @return 动作名称
+         */
+        String action();
+    }
+
+    /**
+     * 请求处理器定义。
+     *
+     * @param requestType 请求实体类型
+     * @param consumer    处理逻辑
+     * @param <T>         请求实体类型
+     */
+    private record QueryHandler<T extends JsRequest>(Class<T> requestType, Consumer<T> consumer) {
+    }
+
+    /**
+     * 原始动作包装。
+     *
+     * @param action 动作名称
+     */
+    private record ActionRequest(String action) implements JsRequest {
+    }
+
+    /**
+     * 无额外参数的会话列表请求。
+     *
+     * @param action 动作名称
+     */
+    private record EmptyRequest(String action) implements JsRequest {
+    }
+
+    /**
+     * 请求指定 CLI 类型的会话列表。
+     *
+     * @param action  动作名称
+     * @param cliType CLI 类型
+     */
+    private record ListSessionsRequest(String action, String cliType) implements JsRequest {
+    }
+
+    /**
+     * 请求历史消息。
+     *
+     * @param action     动作名称
+     * @param sessionId  会话 ID
+     * @param cliType    CLI 类型
+     */
+    private record LoadHistoryRequest(String action, String sessionId, String cliType) implements JsRequest {
+    }
+
+    /**
+     * 发送消息请求。
+     *
+     * @param action         动作名称
+     * @param text           用户文本
+     * @param cliType        CLI 类型
+     * @param sessionId      会话 ID
+     * @param modelId        模型 ID
+     * @param fileReferences 文件引用列表
+     */
+    private record SendMessageRequest(String action, String text, String cliType, String sessionId,
+                                      String modelId, List<FileReferencePayload> fileReferences) implements JsRequest {
+    }
+
+    /**
+     * 停止生成请求。
+     *
+     * @param action    动作名称
+     * @param sessionId 会话 ID
+     */
+    private record StopGenerationRequest(String action, String sessionId) implements JsRequest {
+    }
+
+    /**
+     * 批量删除会话请求。
+     *
+     * @param action      动作名称
+     * @param sessionIds  逗号分隔的会话 ID 列表
+     */
+    private record DeleteSessionsRequest(String action, String sessionIds) implements JsRequest {
+    }
+
+    /**
+     * 保存待发送队列请求。
+     *
+     * @param action       动作名称
+     * @param sessionId    会话 ID
+     * @param pendingQueue 待发送队列 JSON
+     */
+    private record SavePendingQueueRequest(String action, String sessionId, String pendingQueue) implements JsRequest {
+    }
+
+    /**
+     * 保存重试配置请求。
+     *
+     * @param action         动作名称
+     * @param retryMaxCount  最大重试次数
+     * @param retryTimeoutMs 超时时间
+     */
+    private record SaveRetryConfigRequest(String action, int retryMaxCount, long retryTimeoutMs) implements JsRequest {
+    }
+
+    /**
+     * 保存模型配置请求。
+     *
+     * @param action 动作名称
+     * @param models 模型配置 JSON
+     */
+    private record SaveModelsRequest(String action, String models) implements JsRequest {
+    }
+
+    /**
+     * 查询 CLI 可用模型请求。
+     *
+     * @param action  动作名称
+     * @param cliType CLI 类型
+     */
+    private record QueryCliModelsRequest(String action, String cliType) implements JsRequest {
+    }
+
+    /**
+     * 搜索文件引用请求。
+     *
+     * @param action    动作名称
+     * @param query     查询关键字
+     * @param limit     最大结果数
+     * @param requestId 请求 ID
+     */
+    private record SearchFileReferencesRequest(String action, String query, int limit, String requestId)
+            implements JsRequest {
+    }
+
+    /**
+     * 解析文件引用请求。
+     *
+     * @param action 动作名称
+     * @param path   文件路径
+     */
+    private record ResolveFileReferenceRequest(String action, String path) implements JsRequest {
+    }
+
+    /**
+     * 保存剪贴板图片请求。
+     *
+     * @param action   动作名称
+     * @param dataUrl  图片 data URL
+     * @param fileName 文件名
+     */
+    private record SaveClipboardImageRequest(String action, String dataUrl, String fileName) implements JsRequest {
+    }
+
+    /**
+     * 打开文件 diff 请求。
+     *
+     * @param action 动作名称
+     * @param editId 编辑 ID
+     */
+    private record OpenFileEditDiffRequest(String action, String editId) implements JsRequest {
+    }
+
+    /**
+     * 回撤文件编辑请求。
+     *
+     * @param action 动作名称
+     * @param editId 编辑 ID
+     */
+    private record RevertFileEditRequest(String action, String editId) implements JsRequest {
+    }
+
+    /**
+     * 主题回调载荷。
+     *
+     * @param isDark 是否深色主题
+     */
+    private record ThemePayload(boolean isDark) {
+    }
+
+    /**
+     * 流结束回调载荷。
+     *
+     * @param sessionId 会话 ID
+     */
+    private record StreamCompletePayload(String sessionId) {
+    }
+
+    /**
+     * 重试配置回调载荷。
+     *
+     * @param retryMaxCount  最大重试次数
+     * @param retryTimeoutMs 超时时间
+     */
+    private record RetryConfigPayload(int retryMaxCount, long retryTimeoutMs) {
+    }
+
+    /**
+     * 持久化待发送队列载荷。
+     *
+     * @param sessionId    会话 ID
+     * @param pendingQueue 待发送队列 JSON
+     */
+    private record PendingQueueStatePayload(String sessionId, String pendingQueue) {
+    }
+
+    /**
+     * 持久化状态恢复载荷。
+     *
+     * @param currentSessionId 当前会话 ID
+     * @param currentCliType   当前 CLI 类型
+     * @param pendingQueues    待发送队列列表
+     * @param retryMaxCount    最大重试次数
+     * @param retryTimeoutMs   超时时间
+     */
+    private record RestoredStatePayload(String currentSessionId, String currentCliType,
+                                        List<PendingQueueStatePayload> pendingQueues,
+                                        int retryMaxCount, long retryTimeoutMs) {
+    }
+
+    /**
+     * 文件引用候选回调载荷。
+     *
+     * @param requestId 请求 ID
+     * @param results   文件引用候选列表
+     */
+    private record FileReferenceCandidatesPayload(String requestId, List<FileReferenceCandidatePayload> results) {
+    }
+
+    /**
+     * 会话删除完成回调载荷。
+     *
+     * @param deletedCount 删除成功数量
+     * @param sessionIds   请求删除的会话 ID
+     */
+    private record SessionsDeletedPayload(int deletedCount, List<String> sessionIds) {
     }
 }
